# ii_for_ubuntu

./: CMakeLists.txt
cmake/macros/: ConsolidateStackComponents.cmake  FixupInterface.cmake  GenerateInstallers.cmake  GenerateInstallersUTII.cmake  IncludeApplicationVersionUTII.cmake  InstallBesideConsole.cmake  ManuallyInstallSSLEay.cmake  PackageLibrariesForDeployment.cmake  SetPackagingParameters.cmake  SetupHifiPlugin.cmake
cmake/modules/: FindOpenSSL.cmake
cmake/templates/: BuildInfo.h.in  CPackProperties.cmake.in  NSIS.template.in
domain-server/src/: DomainServer.cpp
ice-server/src/: IceServer.cpp
interface/: CMakeLists.txt
interface/icon/: UL-II-Logo.xcf  UTII.icns
interface/resources/html/: utii-welcome.html
interface/resources/info/: ApplicationInfo.ini
interface/resources/qml/: LoadingScreen.qml  LoginDialog.qml
interface/src/: Application.cpp  Application.h  Bookmarks.cpp  CrashHandler.cpp  DiscoverabilityManager.cpp  FileLogger.cpp  Menu.cpp  Menu.h  main.cpp
interface/src/devices/: DdeFaceTracker.h
interface/src/scripting/: AccountScriptingInterface.cpp  AccountScriptingInterface.h
interface/src/ui/: AddressBarDialog.h  DialogsManager.cpp  DialogsManager.h  LoadingScreen.cpp  LoadingScreen.h  LoginDialog.cpp  ModelsBrowser.cpp  ScriptEditorWidget.cpp  UpdateDialog.cpp  UpdateDialog.h
libraries/ui/: CMakeLists.txt
plugins/hifiNeuron/: CMakeLists.txt
plugins/hifiSixense/: CMakeLists.txt
plugins/oculus/: CMakeLists.txt
scripts/: defaultScriptsForUTII.js
server-console/: CMakeLists.txt
tools/nsis/: release-utii.nsi
(+34 files in other folders)
